footer no longer stuck on smaller screen but doesn't stay at bottom when content is too small

--- a/src/App.css
+++ b/src/App.css
@@ -32,7 +32,6 @@ html, body {
   justify-content: center;
   align-items: center;
   min-height: 100%;
-  position: absolute;
   
 }
 
